fix: verticaling align on "i" tags

--- a/src/public/css/main.less
+++ b/src/public/css/main.less
@@ -12,6 +12,10 @@ p , code , pre{
   word-wrap: break-word;
 }
 
+i {
+  vertical-align: middle;
+}
+
 body {
   direction: rtl;
   background-color: #f8f8f8;
